compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_with_complex_subject.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 78
expression: "\npub fn go(x: Int, y: Int) -> Int {\n  case x + y {\n    0 -> 1\n    _ -> 2\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int, y: Int) -> Int {
  case x + y {
    0 -> 1
    _ -> 2
  }
}


----- COMPILED GO
package thepackage

func Go(x int64, y int64) int64 {
  return (func() int64 {
    _case_subject := (x + y)
    _ = _case_subject
    if _case_subject == int64(0) {
      return int64(1)
    }
    return int64(2)
  }())
}
